Fixed hashtag bar alignment in replies

--- a/TangerineUI.css
+++ b/TangerineUI.css
@@ -928,6 +928,7 @@ body.layout-single-column  {
 }
 .layout-single-column .status--in-thread .attachment-list,
 .layout-single-column .status--in-thread .audio-player,
+.layout-single-column .status--in-thread .hashtag-bar,
 .layout-single-column .status--in-thread .media-gallery,
 .layout-single-column .status--in-thread .picture-in-picture-placeholder,
 .layout-single-column .status--in-thread .status-card,
